--- a/index.html
+++ b/index.html
@@ -7837,8 +7837,8 @@
         
         .silex-id-1490995911864-0 {
             width: 1321px;
-            top: 7px;
-            left: 75px;
+            top: 9px;
+            left: 68px;
             display: inline-block;
             direction: ltr;
             .element {
@@ -7862,10 +7862,17 @@
                     -webkit-font-feature-settings: 'liga';
                     -webkit-font-smoothing: antialiased;
                 }
+                .silex-id-1490996182994-1 {
+                    min-height: 325px;
+                    width: 320px;
+                    background-color: rgb(255, 255, 255);
+                    top: 124px;
+                    left: 244px;
+                }
     </style>
     <title></title>
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1490995911864-0":{"width":"1321px","top":"7px","left":"75px","display":"inline-block","direction":"ltr",".element{\n min-height":"157px","background-color":"rgb(255, 255, 255)","min-height":"59px","/* fallback */\n@font-face {\n  font-family":"'Material Icons'","font-style":"normal","font-weight":"normal","}\n\n.material-icons {\n  font-family":"'Material Icons'","font-size":"24px","line-height":"1","letter-spacing":"normal","text-transform":"none","white-space":"nowrap","word-wrap":"normal","-webkit-font-feature-settings":"'liga'","-webkit-font-smoothing":"antialiased"}},"mobile":{},"componentData":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgba(255,255,255,1)"},"silex-id-1474394621033-3":{"min-height":"600px","top":"5px","left":"0px"},"silex-id-1474394621032-2":{"min-height":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474394605264-1":{"min-height":"100px","width":"100px","top":"100px","left":"100px"},"silex-id-1474394605263-0":{"min-height":"100px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"36px","width":"960px","top":"37px","left":"1px"},"silex-id-1490995911864-0":{"width":"1321px","top":"9px","left":"68px","display":"inline-block","direction":"ltr",".element{\n min-height":"157px","background-color":"rgb(255, 255, 255)","min-height":"59px","/* fallback */\n@font-face {\n  font-family":"'Material Icons'","font-style":"normal","font-weight":"normal","}\n\n.material-icons {\n  font-family":"'Material Icons'","font-size":"24px","line-height":"1","letter-spacing":"normal","text-transform":"none","white-space":"nowrap","word-wrap":"normal","-webkit-font-feature-settings":"'liga'","-webkit-font-smoothing":"antialiased"},"silex-id-1490996182994-1":{"min-height":"325px","width":"320px","background-color":"rgb(255, 255, 255)","top":"137px","left":"333px"}},"mobile":{},"componentData":{}}]
     </script>
 
 
@@ -7971,6 +7978,38 @@
                     </nav>
                 </div>
             </div>
+        </div>
+    </div>
+    <div data-silex-type="html" class="editable-style silex-id-1490996182994-1 html-element" data-silex-id="silex-id-1490996182994-1">
+        <div class="silex-element-content">
+            <main class="mdl-layout__content">
+                <!-- Square card -->
+                <style>
+                    .demo-card-square.mdl-card {
+                        width: 320px;
+                        height: 320px;
+                    }
+                    
+                    .demo-card-square>.mdl-card__title {
+                        color: white;
+                        background: url('index.html') bottom right 15% no-repeat indigo;
+                    }
+                </style>
+
+                <div class="demo-card-square mdl-card mdl-shadow--2dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <h2 class="mdl-card__title-text">LYCEE PROFESSIONEL</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Filières professionels du Lycée Montplaisir
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      VOIR
+    </a>
+                    </div>
+                </div>
+            </main>
         </div>
     </div>
 </body>
