--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
 </main>
 <!-- Square card -->
 <style>
-.demo-card-square.mdl-card {
+.demo-card-square1.mdl-card1 {
   width: 320px;
   height: 320px;
 }
-.demo-card-square > .mdl-card__title {
+.demo-card-square > .mdl-card__title1 {
   color: white;
   background:
     url('') bottom right 15% no-repeat light green;
 }
 </style>
 
-<div class="demo-card-square mdl-card mdl-shadow--2dp">
+<div class="demo-card-square1 mdl-card1 mdl-shadow--2dp">
   <div class="mdl-card__title mdl-card--expand">
     <h2 class="mdl-card__title-text">LYCEE TECHNOLOGIQUE</h2>
   </div>
