--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </main>
 <!-- Square card -->
 <style>
-.demo-card-square1.mdl-card1 {
+.demo-card-square.mdl-card1 {
   width: 320px;
   height: 320px;
 }
@@ -108,7 +108,7 @@
 }
 </style>
 
-<div class="demo-card-square1 mdl-card1 mdl-shadow--2dp">
+<div class="demo-card-square mdl-card1 mdl-shadow--2dp">
   <div class="mdl-card__title mdl-card--expand">
     <h2 class="mdl-card__title-text">LYCEE TECHNOLOGIQUE</h2>
   </div>
