--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </main>
 <!-- Square card -->
 <style>
-.demo-card-square.mdl-card1 {
+.demo-card-square.mdl-card {
   width: 320px;
   height: 320px;
 }
@@ -108,8 +108,8 @@
 }
 </style>
 
-<div class="demo-card-square mdl-card1 mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
+<div class="demo-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title1 mdl-card--expand">
     <h2 class="mdl-card__title-text">LYCEE TECHNOLOGIQUE</h2>
   </div>
   <div class="mdl-card__supporting-text">
