--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
     </a>
   </div>
 </div>
-</main>
-<!-- Square card -->
+	  <!-- Square card -->
 <style>
 .demo-card-square.mdl-card {
   width: 320px;
@@ -104,7 +103,7 @@
 .demo-card-square > .mdl-card__title1 {
   color: white;
   background:
-    url('') bottom right 15% no-repeat light green;
+    url('') bottom right 15% no-repeat green;
 }
 </style>
 
@@ -121,6 +120,7 @@
     </a>
   </div>
 </div>
+</main>
   <footer class="mdl-mini-footer">
   <div class="mdl-mini-footer__left-section">
     <div class="mdl-logo">© 2017 Félix Gouin pour Montplaisir | 75 Rue Montplaisir 26000 Valence - 04 75 82 18 18</div>
