--- a/index.html
+++ b/index.html
@@ -63,11 +63,18 @@
 .demo-card-square.mdl-card {
   width: 320px;
   height: 320px;
+   padding: 12px;
+   margin: 50px;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
   background:
     url('') bottom right 15% no-repeat indigo;
+}
+.demo-card-square > .mdl-card__title1 {
+  color: white;
+  background:
+    url('') bottom right 15% no-repeat green;
 }
 </style>
 
@@ -84,19 +91,7 @@
     </a>
   </div>
 </div>
-	  <!-- Square card -->
-<style>
-.demo-card-square.mdl-card {
-  width: 320px;
-  height: 320px;
-}
-.demo-card-square > .mdl-card__title1 {
-  color: white;
-  background:
-    url('') bottom right 15% no-repeat green;
-}
-</style>
-
+	  <!-- Square card 2 -->
 <div class="demo-card-square mdl-card mdl-shadow--2dp">
   <div class="mdl-card__title1 mdl-card--expand">
     <h2 class="mdl-card__title-text">LYCEE TECHNOLOGIQUE</h2>
