--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 .demo-card-square.mdl-card {
   width: 320px;
   height: 320px;
-   padding: 12px;
-   margin: 50px;
+ padding: 12px;
+ margin-bottom: 20px;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
