--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   width: 320px;
   height: 320px;
  padding: 12px;
- margin-bottom: 20px;
+ margin: auto;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
