--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 .demo-card-square.mdl-card {
   width: 320px;
   height: 320px;
+border: 0px;
  padding: 12px;
- margin: auto;
+ margin-top: auto;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
