--- a/index.html
+++ b/index.html
@@ -75,11 +75,29 @@ border: 0px;
   color: white;
   background:
     url('') bottom right 15% no-repeat green;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
+	color: #000;
+	display: block;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-justify-content: stretch;
+	-ms-flex-pack: stretch;
+	justify-content: stretch;
+	line-height: normal;
+	padding: 16px;
+	-webkit-perspective-origin: 165px 56px;
+	perspective-origin: 165px 56px;
+	-webkit-transform-origin: 165px 56px;
+	transform-origin: 165px 56px;
+	box-sizing: border-box
 }
 </style>
 
 <div class="demo-card-square mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
+  <div class="mdl-card__title1 mdl-card--expand">
     <h2 class="mdl-card__title-text">LYCEE PROFESSIONEL</h2>
   </div>
   <div class="mdl-card__supporting-text">
@@ -93,7 +111,7 @@ border: 0px;
 </div>
 	  <!-- Square card 2 -->
 <div class="demo-card-square mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title1 mdl-card--expand">
+  <div class="mdl-card__title mdl-card--expand">
     <h2 class="mdl-card__title-text">LYCEE TECHNOLOGIQUE</h2>
   </div>
   <div class="mdl-card__supporting-text">
