--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
   height: 320px;
 border: 0px;
  margin-top: auto;
+display: flex;
+flex-wrap: wrap;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
