--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 border: 0px;
  margin-top: auto;
 display: flex;
-flex-wrap: nowrap;
+justify-content: space-around;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
