--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
   width: 320px;
   height: 320px;
 border: 0px;
- margin-top: auto;
-justify-content: center;
+     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .demo-card-square > .mdl-card__title {
   color: white;
@@ -78,7 +79,7 @@ justify-content: center;
 	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
-	color: #000;
+	color: white;
 	display: block;
 	display: -webkit-flex;
 	display: -ms-flexbox;
